# srba

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  ChangeLog.md  README.md  RbaEngine_8h.html  RbaEngine_8h_source.html  add-observations_8h_source.html  alloc__keyframe_8h_source.html  alloc__kf2kf__edge_8h_source.html  annotated.html  bfs__visitor_8h_source.html  classCDirectedTree.html  classLM__TYPE.html  classes.html  classic__linear__rba_8h_source.html  classkf2kf__pose__t.html  classlandmark__t.html  classsrba_1_1RbaEngine-members.html  classsrba_1_1RbaEngine.html  classsrba_1_1SchurComplement-members.html  classsrba_1_1SchurComplement.html  compute__minus__gradient_8h_source.html  create__kf2kf__edge_8h_source.html  define__new__keyframe_8h_source.html  determine__kf2kf__edges__to__create_8h_source.html  eval__overall__error_8h_source.html  export__dot_8h_source.html  export__opengl_8h_source.html  export__opengl__landmark__renderers_8h_source.html  files.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  (+346 more)
apps/: CMakeLists.txt
apps/rel-graph-slam/: CMakeLists.txt  rel-graph-slam-se2.cpp
apps/srba-slam/: CDatasetParserBase.h  CDatasetParser_Cartesian_3D.h  CDatasetParser_Monocular.h  CDatasetParser_RangeBearing2D.h  CDatasetParser_RelGraphSLAM2D.h  CDatasetParser_Stereo.h  CMakeLists.txt  instance_relative_graph_slam_se2.cpp  instance_se3_lm3d_monocular.cpp  instance_se3_lm3d_stereo.cpp  srba-run-generic-impl.h  srba-slam_common.h  srba-slam_main.cpp
datasets/: tutorials_dataset-cartesian-3d.cfg
docs/: Doxyfile  dox_footer.html  mainpage_dox.h
docs/srba-guide/: Makefile  srba-guide.tex
examples/: CMakeLists.txt  README.md  tutorial-srba-cartesian2d-se2.cpp  tutorial-srba-cartesian3d-se3.cpp  tutorial-srba-range-bearing-se2.cpp  tutorial-srba-range-bearing-se3.cpp  tutorial-srba-relative-graph-slam-se2.cpp  tutorial-srba-stereo-se2.cpp  tutorial-srba-stereo-se3.cpp
examples/cpp/: CMakeLists.txt  tutorial-srba-cartesian2d-se2.cpp  tutorial-srba-cartesian3d-se3.cpp  tutorial-srba-how-to-recover-global-map.cpp  tutorial-srba-monocular-se3.cpp  tutorial-srba-range-bearing-se2.cpp  tutorial-srba-range-bearing-se3.cpp  tutorial-srba-relative-graph-slam-se2.cpp  tutorial-srba-relative-graph-slam-se3.cpp  tutorial-srba-remove-observation.cpp  tutorial-srba-stereo-se2.cpp  tutorial-srba-stereo-se3.cpp
include/mrpt/srba/impl/: sparse_hessian_update_numeric.h
include/srba/: RbaEngine.h  landmark_jacob_families.h  landmark_matcher.h  landmark_render_models.h  srba_edge_creation_policies.h  srba_options_noise.h  srba_options_sensor_pose.h  srba_options_solver.h  srba_types.h  version.h
include/srba/ecps/: classic_linear_rba.h  local_areas_fixed_size.h
include/srba/impl/: add-observations.h  alloc_keyframe.h  alloc_kf2kf_edge.h  bfs_visitor.h  compute_minus_gradient.h  create_kf2kf_edge.h  define_new_keyframe.h  determine_kf2kf_edges_to_create.h  edge_creation_policy.h  eval_overall_error.h  export_dot.h  export_opengl.h  export_opengl_landmark_renderers.h  get_global_graphslam_problem.h  jacobians.h  lev-marq_solvers.h  make_ordered_list_base_kfs.h  optimize_edges.h  optimize_local_area.h  rba_problem_common.h  reprojection_residuals.h  schur.h  spantree_create_complete.h  spantree_misc.h  spantree_update_numeric.h  spantree_update_symbolic.h  sparse_hessian_build_symbolic.h  sparse_hessian_update_numeric.h
include/srba/models/: kf2kf_poses.h  landmarks.h  observations.h  observations_Cartesian_2D.h  observations_Cartesian_3D.h  observations_MonocularCamera.h  observations_RangeBearing_2D.h  observations_RangeBearing_3D.h  observations_RelativePoses_2D.h  observations_RelativePoses_3D.h  observations_StereoCamera.h  sensors.h
search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_79.js  all_7a.js  all_7e.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_67.js  classes_68.js  classes_69.js  classes_6a.js  classes_6b.js  classes_6c.js  (+155 more)
tests/: CMakeLists.txt  fixed-transformations_unittest.cpp  schur_unittest.cpp  sensor-pose_unittest.cpp  spantree_unittest.cpp  submaps_edge_init_values.cpp  test_main.cpp
